# eosio_trace_subscription_plugin

./: CMakeLists.txt  README.md  trace_subscription_plugin.cpp
include/eosio/trace_subscription_plugin/: trace_subscription_plugin.hpp
